fix modal overflow

--- a/packages/bs-templates/templates/modal/_modal.scss
+++ b/packages/bs-templates/templates/modal/_modal.scss
@@ -34,7 +34,7 @@
 
     section {
 
-      overflow-y: scroll;
+      overflow-y: auto;
       max-height: 90%;
       margin-top: 15%;
       background: $oa-white;
